# fortune

./: Cargo.toml  README.md  map_editor.py  map_to_png.py
assets/: gen_atlas.py
assets/models/: Pistol Aim.fbx  Running.fbx  combine_animations.py  combine_cowboy_animations.py  combine_cowboy_animations.sh  cowboy_aiming.glb  cowboy_combined_fixed.glb  cowboy_idle.glb  cowboy_shooting.glb  cowboy_walking.glb  create_cowboy_glb.sh  move_cowboy_origin.py
lore/: lore-core.md
src/: camera.rs  character_customization.rs  combat.rs  components.rs  constants.rs  main.rs  map_loader.rs  player.rs  resources.rs  setup.rs  ui.rs  world.rs
utils/: Cargo.toml  README.md  README_python.md  convert_map.sh  convert_map_to_png.sh  map_to_png.py
utils/src/: main.rs
web_map_editor/: README.md  index.html  script.js  style.css
web_map_editor_fast/: README.md  index.html  script.js  style.css
